--- a/src/Payment2.css
+++ b/src/Payment2.css
@@ -44,3 +44,18 @@ width: 30px;
     width: 20vw;
     margin-left: 40vw;
 }
+
+
+
+
+#pid-button{
+ font-size:large !important;
+ width: 100% !important;
+ margin-left: 0 !important;
+
+
+}
+
+.css-sghohy-MuiButtonBase-root-MuiButton-root{
+
+}
