--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,20 @@ body{
 
 
 .css-ke5b6m-MuiButtonBase-root-MuiButton-root{
-  background-color: white !important;
-  color: orange !important;
-  padding: 58px !important;
-  width: 39% !important;
-  font-size: xxx-large !important;
-  border-radius: 10% !important;
+  background-color:#525252  !important;
+  color:white  !important;
+  border: 4px solid white !important;
+  padding: 3% !important;
+  width: 53% !important;
+  font-size: 30px !important;
+  /* border-radius: 10% !important; */
   margin-left: 7% !important;
-  margin-top: 10% !important;
+  margin-top: 5% !important;
 }
 
 .css-ke5b6m-MuiButtonBase-root-MuiButton-root:hover{
-  background-color: orange !important;
-  color:white !important;
+  background-color: rgb(188, 197, 190) !important;
+  color:#525252 !important;
 }
 
 h1{
