--- a/src/component/Start/page.css
+++ b/src/component/Start/page.css
@@ -89,41 +89,38 @@
 /* button */
 
 .button {
-    width: 400px !important;
+    width: 400px;
     background-color: #525252;
     border: solid 4px white;
     color: white;
     font-size: 25px;
     text-align: center;
     padding: 20px;
+    position: relative;
+    overflow: hidden; /* Added to hide the second arrow */
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
-}
-
-.button span {
-    cursor: pointer;
+  }
+  
+  .button span {
     position: relative;
-    transition: 0.1s;
-}
+  }
+  
 
-.button span:after {
+  .button .arrow::after {
     content: '\00bb';
     position: absolute;
     opacity: 0;
     top: 0;
     right: -20px;
     transition: 0.5s;
-}
-
-.button:hover span {
-    padding-right: 25px;
-}
-
-.button:hover span:after {
+  }
+  
+  .button:hover .arrow::after {
     opacity: 1;
-    right: 0;
-}
+    right: 5px;
+  }
 
 
 
