--- a/src/component/Start/page.css
+++ b/src/component/Start/page.css
@@ -20,7 +20,7 @@
     flex-direction: row;
     font-size: 30px;
     text-align: center;
-    height: 44.4vw;
+    height: 46.9vw;
     margin-bottom: 0;
 }
 
@@ -38,7 +38,7 @@
     /* border: black 2px solid; */
     background-color: #525252;
     color: white;
-    padding: 10px;
+    /* padding: 10px; */
 
 }
 
@@ -153,17 +153,17 @@
     font-size: 60px;
 }
 
-#helpper {
+.helpper {
     color: white;
     font-size: 25px;
     font-weight: bold;
     margin-left: 75%;
-    margin-top: 10%;
+    margin-top: 3%;
     background-color: #31373a;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
     height: 35px;
-    width: 20%;
+    width: 30%;
     padding: 3%;
 }
 
